@@ -1,7 +1,8 @@
-- MANTA-1039 Output all candidates in candidateSV.vcf to match variant IDs
+- MANTA-1236 Fix contig output feature for all SV types
+- MANTA-1039 Fix candidateSV.vcf to include all variants to match variant IDs
 - MANTA-1218 Add sanity check of specified target regions
 - MANTA-1097 Add handling MateCigar BAM tag in adapter-read check
-- MANTA-1176 Add unit tests for EstimateSVLoci modules 
+- MANTA-1176 Add unit tests for EstimateSVLoci modules
 
 v1.2.0
 - MANTA-1215 Add an option for specification of an existing alignment stats file
